MGMT-1214 - allow user to change hostnames of the nodes up to Install command. The change will affect the nodes after nodes are rebooted to RCHOS
