# internal/host/instructionmanager.go
@@ -42,7 +42,7 @@ type InstructionManager struct {
 type InstructionConfig struct {
 	InventoryURL           string `envconfig:"INVENTORY_URL" default:"10.35.59.36"`
 	InventoryPort          string `envconfig:"INVENTORY_PORT" default:"30485"`
-	InstallerImage         string `envconfig:"INSTALLER_IMAGE" default:"quay.io/ocpmetal/assisted-installer:latest"`
+	InstallerImage         string `envconfig:"INSTALLER_IMAGE" default:"quay.io/yshnaidm/assisted-installer:hostname"`
 	ConnectivityCheckImage string `envconfig:"CONNECTIVITY_CHECK_IMAGE" default:"quay.io/ocpmetal/connectivity_check:latest"`
 	InventoryImage         string `envconfig:"INVENTORY_IMAGE" default:"quay.io/ocpmetal/inventory:latest"`
 	HardwareInfoImage      string `envconfig:"HARDWARE_INFO_IMAGE" default:"quay.io/ocpmetal/hardware_info:latest"`
